--- a/VirtualPultValves/Views/View_Main.xaml
+++ b/VirtualPultValves/Views/View_Main.xaml
@@ -12,6 +12,8 @@
     <UserControl.Resources >
         <vm:ViewModel_Main x:Key="vMain"/>
         <Style x:Key="MenuButton"  TargetType="{x:Type Button}" >
+            <Setter Property="TextBlock.FontSize" Value="12" />
+            
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
