--- a/VirtualPultValves/Themes/Generic.xaml
+++ b/VirtualPultValves/Themes/Generic.xaml
@@ -301,6 +301,7 @@
 
                             <ContentPresenter HorizontalAlignment="Center" 
 					VerticalAlignment="Center" 
+                                              TextBlock.FontSize="7"
 					Grid.RowSpan="1" Grid.Column="1" Grid.Row="1"/>
                             <Border BorderThickness="0" Grid.Column="0" Margin="0" Grid.Row="1" HorizontalAlignment="Stretch" Grid.RowSpan="1" Width="Auto"  Height="Auto     ">
                                 <Border.Background>
