--- a/Malicow/VirtualNeptun/PultNeptun/PultNeptun/MainWindow.xaml
+++ b/Malicow/VirtualNeptun/PultNeptun/PultNeptun/MainWindow.xaml
@@ -11,8 +11,8 @@
             
         mc:Ignorable="d"
         Title="MainWindow" Background="#FF72EB0D" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Width="1600" Height="900">
-    <Grid Margin="444.6,358.8,500.2,-207.8">
-        <local:nmLeftPultView Margin="-444,-374.4,-518.4,187.2"  />
+    <Grid>
+        <local:nmLeftPultView Width="Auto" Height="Auto"  />
     </Grid>
     <!-- <Canvas>
         <local:LeftInpuView Height="Auto" Width="Auto"/>
